--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+html, main, #root {
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+}
+
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
